--- a/pages/event/event.html
+++ b/pages/event/event.html
@@ -31,7 +31,7 @@
             <div class="image-card">
                 <div class="sparkle sparkle-1">✦</div>
                 <div class="sparkle sparkle-2">✦</div>
-                <img src="">
+                <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?w=400" alt="Event">
             </div>
         </div>
     </section>
@@ -72,20 +72,20 @@
 
     <div class="description">
         <h3>Before the real experiment begins, we prepare the battlefield.</h3>
-        <p>This phase is all about getting comfortable, building hype and letting everyone feel the contrast between randomness and analyze — before real money enters the arena. No pressure. No regrets.</p>
+        <p>This phase is all about getting comfortable, building hype and letting everyone feel the contrast between randomness and analyze – before real money enters the arena. No pressure. No regrets.</p>
     </div>
 
     <div class="carousel-section">
         <div class="carousel-container">
             <div class="carousel" id="carousel">
                 <div class="carousel-slide">
-                    <img src="data:image/svg+xml,%3Csvg width='1000' height='400' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='1000' height='400' fill='%23475569'/%3E%3Ctext x='50%25' y='45%25' font-family='Arial' font-size='32' fill='%2340e0d0' text-anchor='middle'%3EEVENT PHOTO 1%3C/text%3E%3Ctext x='50%25' y='55%25' font-family='Arial' font-size='20' fill='%23fff' text-anchor='middle'%3EPeople at Event%3C/text%3E%3C/svg%3E" alt="Event Photo 1">
+                    <img src="https://images.unsplash.com/photo-1557804506-669a67965ba0?w=1000" alt="Event Photo 1">
                 </div>
                 <div class="carousel-slide">
-                    <img src="data:image/svg+xml,%3Csvg width='1000' height='400' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='1000' height='400' fill='%23334155'/%3E%3Ctext x='50%25' y='45%25' font-family='Arial' font-size='32' fill='%2340e0d0' text-anchor='middle'%3EEVENT PHOTO 2%3C/text%3E%3Ctext x='50%25' y='55%25' font-family='Arial' font-size='20' fill='%23fff' text-anchor='middle'%3ETeam Discussion%3C/text%3E%3C/svg%3E" alt="Event Photo 2">
+                    <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?w=1000" alt="Event Photo 2">
                 </div>
                 <div class="carousel-slide">
-                    <img src="data:image/svg+xml,%3Csvg width='1000' height='400' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='1000' height='400' fill='%23475569'/%3E%3Ctext x='50%25' y='45%25' font-family='Arial' font-size='32' fill='%2340e0d0' text-anchor='middle'%3EEVENT PHOTO 3%3C/text%3E%3Ctext x='50%25' y='55%25' font-family='Arial' font-size='20' fill='%23fff' text-anchor='middle'%3EPresentation Time%3C/text%3E%3C/svg%3E" alt="Event Photo 3">
+                    <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?w=1000" alt="Event Photo 3">
                 </div>
             </div>
             <button class="carousel-nav prev" id="prevBtn">◀</button>
@@ -103,6 +103,120 @@
             <span></span><span></span><span></span><span></span><span></span>
         </div>
     </div>
+
+    <!-- Timeline Section -->
+    <section class="timeline-section" id="event">
+        <div class="timeline-header">
+            <button class="schedule-btn">Our Event Schedule</button>
+            <h2>Timeline</h2>
+        </div>
+
+        <div class="timeline-container">
+            <!-- Pre-Event -->
+            <div class="timeline-item left">
+                <div class="timeline-content">
+                    <h3>Pre-Event 📅</h3>
+                    <h4>December 23rd 2025</h4>
+                    <ul>
+                        <li>Get introduced to the basic rules of the show</li>
+                        <li>Choose your team: Team Luck or Team Logic</li>
+                        <li>Explore the stocks available in the pool</li>
+                        <li>Make predictions on which method will win (mostly based on confidence… or pure delusion)</li>
+                    </ul>
+                </div>
+                <div class="timeline-image">
+                    <img src="https://images.unsplash.com/photo-1557804506-669a67965ba0?w=400" alt="Pre-Event">
+                </div>
+            </div>
+
+            <!-- Timeline Line -->
+            <div class="timeline-line"></div>
+
+            <!-- Main Event -->
+            <div class="timeline-item right">
+                <div class="timeline-image">
+                    <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?w=400" alt="Main Event">
+                </div>
+                <div class="timeline-content">
+                    <h3>Main Event 🎯</h3>
+                    <h4>January 1st 2026</h4>
+                    <ul>
+                        <li>In the Main Event, the two investment paths officially compete. Both teams start with the same budget, track their progress over time, and react to real market conditions — whether bullish joy or emotional damage.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Team Selection Section -->
+    <section class="teams-section" id="team">
+        <div class="teams-header">
+            <button class="teams-btn">Choose Your Team</button>
+        </div>
+
+        <div class="teams-grid">
+            <div class="team-card luck">
+                <div class="team-image">
+                    <img src="https://images.unsplash.com/photo-1507679799987-c73779587ccf?w=400" alt="Team Luck">
+                </div>
+                <h3>🎲 Team Luck</h3>
+                <p>Uses the gacha system to determine:<br>👉Which stock to buy<br>👉How much to invest<br>👉When to enter or exit<br>No strategy. No charts. Just fate.</p>
+                <button class="join-btn">JOIN TEAM</button>
+            </div>
+
+            <div class="team-card logic">
+                <div class="team-image">
+                    <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?w=400" alt="Team Logic">
+                </div>
+                <h3>📈 Team Logic</h3>
+                <p>Uses proper investing methods such as:<br>👉Technical and fundamental analysis<br>👉Risk management<bt>👉Market sentiment and trends<br>Rational decision-making (hopefully)</p>
+                <button class="join-btn">JOIN TEAM</button>
+            </div>
+        </div>
+    </section>
+
+    <!-- Final Question Section -->
+    <section class="final-question">
+        <h3>At the end, we compare the final portfolios to reveal:</h3>
+        <div class="questions">
+            <p>👉 Did luck beat analysis?</p>
+            <p>👉 Did discipline triumph over randomness?</p>
+            <p>👉 Or did everyone suffer together because the market said "no"?</p>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>Social Media</h3>
+                <p>Follow us on social media to find out the latest updates on our event!</p>
+                <div class="social-icons">
+                    <a href="#" aria-label="Instagram">📷</a>
+                    <a href="#" aria-label="LinkedIn">💼</a>
+                    <a href="#" aria-label="TikTok">🎵</a>
+                </div>
+            </div>
+            <div class="footer-section">
+                <h3>Contact Information</h3>
+                <div class="contact-list">
+                    <div class="contact-person">
+                        <p class="name">Abdul Brad Pitt</p>
+                        <p>📧 08123456789</p>
+                        <p>📧 abdulbrad@email.com</p>
+                    </div>
+                    <div class="contact-person">
+                        <p class="name">Abdul Brad Pitt</p>
+                        <p>📧 08123456789</p>
+                        <p>📞 bradpittabdul</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>© 2025 Intern KSEP ITB (Divisi Operasional). All Rights Reserved</p>
+        </div>
+    </footer>
 
     <script src="event.js"></script>
 </body>
