Hero setengah jadi -Orkhan

--- a/pages/event/event.html
+++ b/pages/event/event.html
@@ -29,9 +29,7 @@
         </div>
         <div class="hero-image">
             <div class="image-card">
-                <div class="sparkle sparkle-1">✦</div>
-                <div class="sparkle sparkle-2">✦</div>
-                <img src="">
+                <img src="/assets/timoty.png">
             </div>
         </div>
     </section>
@@ -64,9 +62,9 @@
             <span>📍</span>
             <span>ITB Jatinangor</span>
         </a>
-        <a href="tel:081234567" class="contact-btn">
+        <a href="tel:08123456789" class="contact-btn">
             <span>📞</span>
-            <span>081234567</span>
+            <span>08123456789</span>
         </a>
     </div>
 
@@ -79,13 +77,13 @@
         <div class="carousel-container">
             <div class="carousel" id="carousel">
                 <div class="carousel-slide">
-                    <img src="data:image/svg+xml,%3Csvg width='1000' height='400' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='1000' height='400' fill='%23475569'/%3E%3Ctext x='50%25' y='45%25' font-family='Arial' font-size='32' fill='%2340e0d0' text-anchor='middle'%3EEVENT PHOTO 1%3C/text%3E%3Ctext x='50%25' y='55%25' font-family='Arial' font-size='20' fill='%23fff' text-anchor='middle'%3EPeople at Event%3C/text%3E%3C/svg%3E" alt="Event Photo 1">
+                    <img src="/assets/nasihuy.png">
                 </div>
                 <div class="carousel-slide">
-                    <img src="data:image/svg+xml,%3Csvg width='1000' height='400' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='1000' height='400' fill='%23334155'/%3E%3Ctext x='50%25' y='45%25' font-family='Arial' font-size='32' fill='%2340e0d0' text-anchor='middle'%3EEVENT PHOTO 2%3C/text%3E%3Ctext x='50%25' y='55%25' font-family='Arial' font-size='20' fill='%23fff' text-anchor='middle'%3ETeam Discussion%3C/text%3E%3C/svg%3E" alt="Event Photo 2">
+                    <img src="/assets/penjaruy.jpeg">
                 </div>
                 <div class="carousel-slide">
-                    <img src="data:image/svg+xml,%3Csvg width='1000' height='400' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='1000' height='400' fill='%23475569'/%3E%3Ctext x='50%25' y='45%25' font-family='Arial' font-size='32' fill='%2340e0d0' text-anchor='middle'%3EEVENT PHOTO 3%3C/text%3E%3Ctext x='50%25' y='55%25' font-family='Arial' font-size='20' fill='%23fff' text-anchor='middle'%3EPresentation Time%3C/text%3E%3C/svg%3E" alt="Event Photo 3">
+                    <img src="/assets/sunda.jpg">
                 </div>
             </div>
             <button class="carousel-nav prev" id="prevBtn">◀</button>
@@ -95,12 +93,6 @@
             <span class="dot active" data-slide="0"></span>
             <span class="dot" data-slide="1"></span>
             <span class="dot" data-slide="2"></span>
-        </div>
-        <div class="decorative-dots">
-            <span></span><span></span><span></span><span></span><span></span>
-            <span></span><span></span><span></span><span></span><span></span>
-            <span></span><span></span><span></span><span></span><span></span>
-            <span></span><span></span><span></span><span></span><span></span>
         </div>
     </div>
 
